Pratica/src/bloco2/Ex02/SuffixCalculator.g4
grammar SuffixCalculator;
    program:
        stat* EOF; //Zero or more repetitions of stat

    stat:
        expr? NEWLINE; //Optative expr
    expr:
        expr expr op = ('*'|'/'|'+'|'-')  #ExprSuffix

        |Number #ExprNUmber
        ;

    Number : [0-9]+('.'[0-9]+)?;
    NEWLINE: '\r' ? '\n';
    WS: [ \t]+ ->skip;
